--- a/TreasureHunt/app/src/main/res/values/strings.xml
+++ b/TreasureHunt/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">TreasureHunt</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">Treasure Hunt</string>
 </resources>
